# chatbot

./: .gitignore  ChatBot.py  Dockerfile  bigQueryConfig.json  big_query.py  helper_function.py  main.py  main2.py  pyproject.toml  requirements.txt  save_embedding.py  schema.py  search.py
