[tool.poetry]
name = "chat-bot"
version = "0.1.0"
description = ""
authors = ["WeiChen Lin <asdfg09487@gmail.com>"]
readme = "README.md"
packages = [{include = "chat_bot"}]

[tool.poetry.dependencies]
python = "^3.9"
google-cloud-bigquery = "^3.23.1"
langchain = "^0.2.1"
langchain-google-genai = "^1.0.5"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
uvicorn = "^0.30.0"
fastapi = "^0.111.0"
vertexai = "^1.49.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
